# OpenSpace-Core

./: LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt
openspace/: __main__.py  mcp_server.py
openspace/grounding/backends/gui/transport/: local_connector.py
openspace/grounding/core/quality/: manager.py
openspace/llm/: client.py
openspace/skill_engine/: analyzer.py  evolver.py  registry.py  retrieve_tool.py  skill_ranker.py
