[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openspace-core"
version = "0.1.0"
description = "OpenSpace-Core — Minimal core of OpenSpace: self-evolving skill engine for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "OpenSpace Team@HKUDS"}
]

dependencies = [
    "litellm>=1.70.0,<1.82.7",  # pinned to avoid PYSEC-2026-2 supply-chain compromise (1.82.7/1.82.8 were malicious)
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "jsonschema>=4.25.0",
    "mcp>=1.0.0",
    "anthropic>=0.71.0",
    "pillow>=12.0.0",
    "numpy>=1.24.0",
    "colorama>=0.4.6",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.0",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
macos = [
    "pyobjc-core>=12.0",
    "pyobjc-framework-cocoa>=12.0",
    "pyobjc-framework-quartz>=12.0",
]

linux = [
    "python-xlib>=0.33",
    "pyatspi>=2.38.0",
    "numpy>=1.24.0",
]

windows = [
    "pywinauto>=0.6.8",
    "pywin32>=306",
    "PyGetWindow>=0.0.9",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

all = [
    "openspace-core[macos]; sys_platform == 'darwin'",
    "openspace-core[linux]; sys_platform == 'linux'",
    "openspace-core[windows]; sys_platform == 'win32'",
    "openspace-core[dev]",
]

[project.urls]
Repository = "https://github.com/HKUDS/OpenSpace"
"Bug Tracker" = "https://github.com/HKUDS/OpenSpace/issues"

[project.scripts]
openspace = "openspace.__main__:run_main"
openspace-mcp = "openspace.mcp_server:run_mcp_server"

[tool.setuptools]
packages = {find = {where = ["."], include = ["openspace*"]}}

[tool.setuptools.package-data]
openspace = [
    "config/*.json",
    "config/*.json.example",
]
